# spdx-poetry-demo

./: README.md  pyproject.toml  setup.cfg  setup.py
