[tool.poetry]
name = "spdx-poetry-demo"
version = "0.1.0"
description = "A small example package"
authors = ["Pratik Karanje <lfpratik@linuxfoundation.org>"]
homepage = 'https://github.com/lfpratik/spdx-poetry-demo'
license = 'apache-2.0'

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache license 2.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
requests = "*"
Flask = ">=0.12.2"
Flask-RESTful = ">=0.3.6"
flask-restful-swagger-2 = ">=0.35"
flask-swagger-ui = ">=3.6.0"
iso8601 = "*"
marshmallow = "<3.0"
psycopg2-binary = "*"
gunicorn = "*"
python-jose = {extras = ["cryptography"], version = "*"}
python-dateutil = "*"
click = "*"
flask-cors = "*"
gitpython = "*"
requests-cache = "*"
redis = "*"
markdown = "*"
"boto3" = "*"
arnparse = "*"
structlog = "*"
docker = "*"
grimoirelab-toolkit = {branch = "master", git = "https://github.com/chaoss/grimoirelab-toolkit"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests-mock = "*"
tox = "*"
moto = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
