[metadata]
name = spdx-poetry-demo-ifpratik
version = 0.0.1
author = Pratik Karanje
author_email = lfpratik@linuxfoundation.org
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lfpratik/spdx-poetry-demo
project_urls =
    Bug Tracker = https://github.com/lfpratik/spdx-poetry-demo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = spdx_poetry_demo
packages = find:
python_requires = >=3.6

[options.packages.find]
where = spdx_poetry_demo
